force-app/main/default/objects/SalesTeams__c/SalesTeams__c.object-meta.xml
<CustomObject>
    <description>**DO NOT DELETE , CRITICAL OBJECT. EDITING OR DELETING WILL BREAK MAIN SALES DATA DASHBOARDS**
Sales Teams and segmentation of sales data, used with EA Dashboards to look at sales data by a team segementation and have one dashboard for several teams</description>
    <label>SalesTeam</label>
    <nameField>
        <label>SalesTeams Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesTeams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>