force-app/main/default/objects/SalesTeams__c/fields/AccType__c.field-meta.xml
<CustomField>
    <fullName>AccType__c</fullName>
    <label>AccType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>