force-app/main/default/objects/SalesTeams__c/fields/BarGroupings__c.field-meta.xml
<CustomField>
    <fullName>BarGroupings__c</fullName>
    <label>BarGroupings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>