force-app/main/default/objects/SalesTeams__c/fields/BarLabel__c.field-meta.xml
<CustomField>
    <fullName>BarLabel__c</fullName>
    <label>BarLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>