force-app/main/default/objects/SalesTeams__c/fields/Chart_5_Label__c.field-meta.xml
<CustomField>
    <fullName>Chart_5_Label__c</fullName>
    <label>Chart_5 Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>