force-app/main/default/objects/SalesTeams__c/fields/chart_5grouping__c.field-meta.xml
<CustomField>
    <fullName>chart_5grouping__c</fullName>
    <defaultValue>&quot;ProductMaster.INVENTORY_PRODUCT_TYPE&quot;</defaultValue>
    <label>chart_5grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>