force-app/main/default/objects/SalesTeams__c/fields/Cogroupforeach2__c.field-meta.xml
<CustomField>
    <fullName>Cogroupforeach2__c</fullName>
    <label>Cogroupforeach2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>