force-app/main/default/objects/SalesTeams__c/fields/Cogroupforeach__c.field-meta.xml
<CustomField>
    <fullName>Cogroupforeach__c</fullName>
    <label>Cogroupforeach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>