force-app/main/default/objects/SalesTeams__c/fields/FilterGroup__c.field-meta.xml
<CustomField>
    <fullName>FilterGroup__c</fullName>
    <label>FilterGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>