force-app/main/default/objects/SalesTeams__c/fields/FilterValue__c.field-meta.xml
<CustomField>
    <fullName>FilterValue__c</fullName>
    <label>FilterValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>