force-app/main/default/objects/SalesTeams__c/fields/FocusQuotaOrder__c.field-meta.xml
<CustomField>
    <fullName>FocusQuotaOrder__c</fullName>
    <label>FocusQuotaOrder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>