force-app/main/default/objects/SalesTeams__c/fields/ForEach__c.field-meta.xml
<CustomField>
    <fullName>ForEach__c</fullName>
    <label>ForEach</label>
    <length>255</length>
    <type>Text</type>
</CustomField>