force-app/main/default/objects/SalesTeams__c/fields/ForEachQuota2__c.field-meta.xml
<CustomField>
    <fullName>ForEachQuota2__c</fullName>
    <label>ForEachQuota2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>