force-app/main/default/objects/SalesTeams__c/fields/Generate2__c.field-meta.xml
<CustomField>
    <fullName>Generate2__c</fullName>
    <label>Generate2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>