force-app/main/default/objects/SalesTeams__c/fields/Generate__c.field-meta.xml
<CustomField>
    <fullName>Generate__c</fullName>
    <label>Generate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>