force-app/main/default/objects/SalesTeams__c/fields/GlobalFilter2__c.field-meta.xml
<CustomField>
    <fullName>GlobalFilter2__c</fullName>
    <label>GlobalFilter2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>