force-app/main/default/objects/SalesTeams__c/fields/GlobalFilter3__c.field-meta.xml
<CustomField>
    <fullName>GlobalFilter3__c</fullName>
    <label>GlobalFilter3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>