force-app/main/default/objects/SalesTeams__c/fields/GlobalFilter__c.field-meta.xml
<CustomField>
    <fullName>GlobalFilter__c</fullName>
    <label>GlobalFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>