force-app/main/default/objects/SalesTeams__c/fields/GroupingAlias2__c.field-meta.xml
<CustomField>
    <fullName>GroupingAlias2__c</fullName>
    <label>GroupingAlias2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>