force-app/main/default/objects/SalesTeams__c/fields/GroupingAlias__c.field-meta.xml
<CustomField>
    <fullName>GroupingAlias__c</fullName>
    <label>GroupingAlias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>