force-app/main/default/objects/SalesTeams__c/fields/PrimaryFilter__c.field-meta.xml
<CustomField>
    <fullName>PrimaryFilter__c</fullName>
    <label>PrimaryFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>