force-app/main/default/objects/SalesTeams__c/fields/PrimaryGrouping__c.field-meta.xml
<CustomField>
    <fullName>PrimaryGrouping__c</fullName>
    <label>PrimaryGrouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>