force-app/main/default/objects/SalesTeams__c/fields/PrimaryQuota__c.field-meta.xml
<CustomField>
    <fullName>PrimaryQuota__c</fullName>
    <label>PrimaryQuota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>