force-app/main/default/objects/SalesTeams__c/fields/Projected__c.field-meta.xml
<CustomField>
    <fullName>Projected__c</fullName>
    <label>Projected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>