force-app/main/default/objects/SalesTeams__c/fields/Quota2FilterField__c.field-meta.xml
<CustomField>
    <fullName>Quota2FilterField__c</fullName>
    <label>Quota2FilterField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>