force-app/main/default/objects/SalesTeams__c/fields/Quota2Group__c.field-meta.xml
<CustomField>
    <fullName>Quota2Group__c</fullName>
    <label>Quota2Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>