force-app/main/default/objects/SalesTeams__c/fields/Quota2ndFilter__c.field-meta.xml
<CustomField>
    <fullName>Quota2ndFilter__c</fullName>
    <label>Quota2ndFilter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>