force-app/main/default/objects/SalesTeams__c/fields/Quota2saql__c.field-meta.xml
<CustomField>
    <fullName>Quota2saql__c</fullName>
    <defaultValue>&quot;;&quot;</defaultValue>
    <label>Quota2saql</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>