force-app/main/default/objects/SalesTeams__c/fields/Quota2UnionStatement__c.field-meta.xml
<CustomField>
    <fullName>Quota2UnionStatement__c</fullName>
    <description>additional union statement. created to combine multiple streams in a Canada quota but can be used for any Team in Quota 2</description>
    <label>Quota2UnionStatement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>