force-app/main/default/objects/SalesTeams__c/fields/QuotaFilterField__c.field-meta.xml
<CustomField>
    <fullName>QuotaFilterField__c</fullName>
    <label>QuotaFilterField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>