force-app/main/default/objects/SalesTeams__c/fields/QuotaFocusEducation__c.field-meta.xml
<CustomField>
    <fullName>QuotaFocusEducation__c</fullName>
    <label>QuotaFocusEducation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>