force-app/main/default/objects/SalesTeams__c/fields/QuotaFocusGeo__c.field-meta.xml
<CustomField>
    <fullName>QuotaFocusGeo__c</fullName>
    <label>QuotaFocusGeo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>