force-app/main/default/objects/SalesTeams__c/fields/QuotaGroup1__c.field-meta.xml
<CustomField>
    <fullName>QuotaGroup1__c</fullName>
    <label>QuotaGroup1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>