force-app/main/default/objects/SalesTeams__c/fields/QuotaGroup3__c.field-meta.xml
<CustomField>
    <fullName>QuotaGroup3__c</fullName>
    <label>QuotaGroup3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>