force-app/main/default/objects/SalesTeams__c/fields/Quotanoresults__c.field-meta.xml
<CustomField>
    <fullName>Quotanoresults__c</fullName>
    <label>Quotanoresults</label>
    <length>255</length>
    <type>Text</type>
</CustomField>