force-app/main/default/objects/SalesTeams__c/fields/QuotaProjection__c.field-meta.xml
<CustomField>
    <fullName>QuotaProjection__c</fullName>
    <label>QuotaProjection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>