force-app/main/default/objects/SalesTeams__c/fields/QuotaSummary2__c.field-meta.xml
<CustomField>
    <fullName>QuotaSummary2__c</fullName>
    <label>QuotaSummary2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>