force-app/main/default/objects/SalesTeams__c/fields/QuotaSummary__c.field-meta.xml
<CustomField>
    <fullName>QuotaSummary__c</fullName>
    <label>QuotaSummary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>