force-app/main/default/objects/SalesTeams__c/fields/QuotaSumProjection__c.field-meta.xml
<CustomField>
    <fullName>QuotaSumProjection__c</fullName>
    <label>QuotaSumProjection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>