force-app/main/default/objects/SalesTeams__c/fields/QuotaTitle1__c.field-meta.xml
<CustomField>
    <fullName>QuotaTitle1__c</fullName>
    <label>QuotaTitle1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>