force-app/main/default/objects/SalesTeams__c/fields/QuotaTitle2__c.field-meta.xml
<CustomField>
    <fullName>QuotaTitle2__c</fullName>
    <label>QuotaTitle2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>