force-app/main/default/objects/SalesTeams__c/fields/QuotaUnion1__c.field-meta.xml
<CustomField>
    <fullName>QuotaUnion1__c</fullName>
    <label>QuotaUnion1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>