force-app/main/default/objects/SalesTeams__c/fields/QuotaUnion2__c.field-meta.xml
<CustomField>
    <fullName>QuotaUnion2__c</fullName>
    <label>QuotaUnion2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>