force-app/main/default/objects/SalesTeams__c/fields/QuotaUnion3__c.field-meta.xml
<CustomField>
    <fullName>QuotaUnion3__c</fullName>
    <label>QuotaUnion3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>