force-app/main/default/objects/SalesTeams__c/fields/ResellerTable__c.field-meta.xml
<CustomField>
    <fullName>ResellerTable__c</fullName>
    <label>ResellerTable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>