force-app/main/default/objects/SalesTeams__c/fields/SecondaryGrouping__c.field-meta.xml
<CustomField>
    <fullName>SecondaryGrouping__c</fullName>
    <label>SecondaryGrouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>