force-app/main/default/objects/SalesTeams__c/fields/Slippage_Order_Statement__c.field-meta.xml
<CustomField>
    <fullName>Slippage_Order_Statement__c</fullName>
    <label>Slippage Order Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>