force-app/main/default/objects/SalesTeams__c/fields/SummaryGroup__c.field-meta.xml
<CustomField>
    <fullName>SummaryGroup__c</fullName>
    <label>SummaryGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>