force-app/main/default/objects/SalesTeams__c/fields/TeamApp__c.field-meta.xml
<CustomField>
    <fullName>TeamApp__c</fullName>
    <label>TeamApp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>