force-app/main/default/objects/SalesTeams__c/fields/TeamQuotaQuery__c.field-meta.xml
<CustomField>
    <fullName>TeamQuotaQuery__c</fullName>
    <label>TeamQuotaQuery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>