force-app/main/default/objects/SalesTeams__c/fields/Text4Quota__c.field-meta.xml
<CustomField>
    <fullName>Text4Quota__c</fullName>
    <label>Text4Quota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>