force-app/main/default/objects/SalesTeams__c/fields/TotalName2__c.field-meta.xml
<CustomField>
    <fullName>TotalName2__c</fullName>
    <label>TotalName2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>