force-app/main/default/objects/SalesTeams__c/fields/TotalName__c.field-meta.xml
<CustomField>
    <fullName>TotalName__c</fullName>
    <label>TotalName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>